--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <style src="./style.css"></style>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script src="./app.js"></script>
-</body>
+<html>
+    <link rel="stylesheet" href="./style.css">
+    <body>
+        <div class="all">
+            <div class="question">27 - 8</div>
+            <div class="started">Start</div>
+            <div class="option">
+                <div class="btn-option">2</div>
+                <div class="btn-option">3</div>
+                <div class="btn-option">16</div>
+                <div class="btn-option">20</div>
+                <div class="btn-option">19</div>
+            </div>
+        </div>
+
+        <script src='app.js'></script>
+    </body>
 </html>
