--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html>
-    <link rel="stylesheet" href="./style.css">
+    <head>
+        <link rel="stylesheet" href="./style.css">
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-YSKXQJYTX7"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-YSKXQJYTX7');
+        </script>
+    </head>
     <body>
         <div class="all">
             <div class="question">27 - 8</div>
