--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
     <head>
+        <meta name="description" content="page description">
+        <meta name="keywords" content="additional keywords">
+        <meta name="author" content="author name">
         <link rel="stylesheet" href="./style.css">
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-YSKXQJYTX7"></script>
